Update references from Pmenu to Olist in index.html

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 Casa Goianita <br> <span class="font-light text-white">Digital & Omnichannel</span>
             </h1>
             <p class="text-xl text-standard max-w-2xl mt-4">
-                Briefing Técnico de Reestruturação do Sistema de Listas de Presentes, Logística e Integração ERP (Pmenu/Vtex).
+                Briefing Técnico de Reestruturação do Sistema de Listas de Presentes, Logística e Integração ERP (Olist/Desenvolvimento).
             </p>
         </section>
 
@@ -256,7 +256,7 @@
                             </li>
                             <li class="flex items-center gap-2">
                                 <span class="w-1.5 h-1.5 rounded-full bg-[var(--live-accent)]"></span>
-                                <strong>Meta Técnica:</strong> Criar um ecossistema digital fluido onde a informação circula automaticamente entre Site, ERP Pmenu e Vtex, eliminando a dependência de processos em papel.
+                                <strong>Meta Técnica:</strong> Criar um ecossistema digital fluido onde a informação circula automaticamente entre Site, ERP Olist e Empresa de desenvolvimento do novo site, eliminando a dependência de processos em papel.
                             </li>
                         </ul>
                     </div>
@@ -329,7 +329,7 @@
                     <div class="flex gap-4">
                         <div class="mt-1 bg-white/10 p-2 rounded-lg"><i data-lucide="refresh-cw" class="w-5 h-5"></i></div>
                         <div>
-                            <h4 class="text-lg font-semibold text-white">Sincronização em Tempo Real (API Pmenu)</h4>
+                            <h4 class="text-lg font-semibold text-white">Sincronização em Tempo Real (API Olist)</h4>
                             <p class="text-sm mt-1">
                                 Consulta via API ao ERP antes do checkout. Funcionalidade de <strong>"Reserva Temporária"</strong>: ao iniciar o checkout, o sistema reserva o item no estoque físico, impedindo venda simultânea na loja.
                             </p>
@@ -427,7 +427,7 @@
 
                 <div class="relative pl-12">
                     <div class="absolute left-0 top-1.5 w-10 h-10 flex items-center justify-center bg-[var(--live-deep)] border border-[var(--live-accent)] rounded-full text-[var(--live-accent)] text-xs font-bold z-10">P0</div>
-                    <h4 class="text-xl font-bold text-white">API Pmenu & Reserva de Estoque</h4>
+                    <h4 class="text-xl font-bold text-white">API Olist & Reserva de Estoque</h4>
                     <p class="text-standard">Sincronização em tempo real e trava de venda simultânea.</p>
                 </div>
 
@@ -459,7 +459,7 @@
                         <h2 class="text-3xl font-bold mb-4">Benefícios Esperados (ROI)</h2>
                         <ul class="space-y-2 text-standard">
                             <li class="flex items-center gap-2"><i data-lucide="check-circle" class="w-4 h-4 text-[var(--live-accent)]"></i> Fim das caixas de papel (Auditoria Digital)</li>
-                            <li class="flex items-center gap-2"><i data-lucide="check-circle" class="w-4 h-4 text-[var(--live-accent)]"></i> Zero venda sem estoque (Reserva Pmenu)</li>
+                            <li class="flex items-center gap-2"><i data-lucide="check-circle" class="w-4 h-4 text-[var(--live-accent)]"></i> Zero venda sem estoque (Reserva Olist)</li>
                             <li class="flex items-center gap-2"><i data-lucide="check-circle" class="w-4 h-4 text-[var(--live-accent)]"></i> Redução de logística reversa física</li>
                         </ul>
                     </div>
